# Micro-Jarvis

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.sh
migrations/2024-06-23-000000_create_users/: down.sql  up.sql
src/: database.rs  main.rs  ml.rs  models.rs  schema.rs
